# madina_abaqus

./: main.py  main_e.py  pressure_data.csv  pyproject.toml  requirements.txt  step_template_e.txt  steps_c.txt  utils.py
part_1/: main.py  pyproject.toml  s7.0_output_files_NT_Path_cycle_1.csv  step_template_e.txt
part_2/: main.py
part_2/files/end/: area_data.xlsx  element_data_end.xlsx  end_template.txt  qz_curve.xlsx
part_2/files/lateral/: element_data.xlsx  initial_gap.xlsx  lateral_template.txt  surface_behav.xlsx
