[tool.poetry]
name = "madina_abaqus"
version = "0.1.0"
description = ""
authors = ["lgblkb <dbakhtiyarov@nu.edu.kz>"]

[tool.poetry.dependencies]
python = "^3.6.9"
numpy = "^1.18.4"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
