[tool.poetry]
name = "madina_abaqus"
version = "0.1.0"
description = ""
authors = ["lgblkb <dbakhtiyarov@nu.edu.kz>"]

[tool.poetry.dependencies]
python = "^3.6.9"
numpy = "^1.18.4"
lgblkb_tools = "^1.1.18"
pypdf2 = "^1.26.0"
reportlab = "^3.5.42"
PyMuPDF = "^1.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
